[package]
name = "gen"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tera = "1.19.0"
toml = "0.7.4"

[dependencies.serde]
version = "1.0.163"
features = ["derive"]
